[gd_scene load_steps=9 format=2]

[ext_resource path="res://Santa Claus/Sprites/Child1.png" type="Texture" id=1]
[ext_resource path="res://Santa Claus/NP/Test/Child.gd" type="Script" id=2]
[ext_resource path="res://Santa Claus/Sprites/Happiness_Indicators.png" type="Texture" id=3]
[ext_resource path="res://Santa Claus/Sprites/5x7 Transparent Number Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://Santa Claus/NP/Test/ChldGiftSlot.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 13 )

[node name="Child" type="Area2D"]
script = ExtResource( 2 )

[node name="Indicator" type="Sprite" parent="."]
position = Vector2( 0, -22 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="FirstDigitSprite" type="Sprite" parent="Indicator"]
position = Vector2( 5.41714, 0.0417004 )
texture = ExtResource( 4 )
hframes = 11

[node name="SecondDigitSprite" type="Sprite" parent="Indicator"]
position = Vector2( 10.5829, 0 )
texture = ExtResource( 4 )
hframes = 11

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="Gift" type="Position2D" parent="."]
position = Vector2( 31, 4 )

[node name="Gifts" type="Node2D" parent="."]

[node name="GiftSlots" type="Node2D" parent="."]

[node name="ChildGiftSlot1" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( 31, 4 )

[node name="ChildGiftSlot2" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( 31, 42 )

[node name="ChildGiftSlot3" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( 0, 42 )

[node name="ChildGiftSlot4" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( -32, 42 )

[node name="ChildGiftSlot5" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( -32, 4 )

[node name="ChildGiftSlot6" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( -32, -35 )

[node name="ChildGiftSlot7" parent="GiftSlots" instance=ExtResource( 5 )]
position = Vector2( 31, -35 )
